ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------


2010-Jun-07 Tilmann Zaschke
		* Implemented support for building DHeightfieldData from short[], 
		  float[] and double[].
		* API CHANGE:
		  - Changed API of DHeightField and DHeightFieldData to accept Object
		    instead of Object[] as type of data.
		   ******************************************************************

2010-May-30 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.3
		   ******************************************************************

2010-May-20 Tilmann Zaschke
		* Fixed recursion in DxBody - Bug ID: 3003719

2010-Feb-23 Tilmann Zaschke
		* Fixed drawstuff problem with ATI 10.1 and 10.2 driver under Linux:
		  Bug ID: 2957098

2010-Feb-03 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.2
		   ******************************************************************

2010-Jan-20 Tilmann Zaschke
		* API change renamed DContact.dSurfaceParameters to DSurfaceParameters
		   ************ ************ ************ ************ ************

2010-Jan-18 Tilmann Zaschke
		* Fixed another problem in GIMPACT (still buggy).

2010-Jan-17 Tilmann Zaschke
		* Improved version with GIMPACT (still buggy).
		  DemoBasket and DemoCyl are working now.
		* Updated copyright information.

2010-Jan-10 Tilmann Zaschke
		* Added initial version for TRIMESH support via GIMPACT (still buggy).

2009-Dec-10 Tilmann Zaschke
		* Fixed bugs where setting a body's dampening or auto-disable 
		  parameters would set these parameters for all other bodies and the 
		  associated world as well. -> BUG ID: 2912249
		* reduced visibility of some public fields in DxWorld and DxBody.

2009-Dec-07 Tilmann Zaschke
		* Removed @brief tags in javadoc except cpp javadoc.
