@@ -657,7 +657,16 @@ class DemoHeightfield extends dsFunctions {
 		// Create an finite heightfield.
 		heightid.buildCallback( null, heightfield_callback,
 				HFIELD_WIDTH, HFIELD_DEPTH, HFIELD_WSTEP, HFIELD_DSTEP,
-				( 1.0 ), ( 0.0 ), ( 0.0 ), false );
+				1.0, 0.0, 0.0, false );
+		// alternative: create heightfield from array
+//		double[] data = new double[HFIELD_WSTEP*HFIELD_DSTEP];
+//		for (int x = 0; x < HFIELD_WSTEP; x++) {
+//			for (int z = 0; z < HFIELD_DSTEP; z++) {
+//				data[x+HFIELD_WSTEP*z] = heightfield_callback(null, x, z);
+//			}
+//		}
+//		heightid.build(data, false, HFIELD_WIDTH, HFIELD_DEPTH, 
+//				HFIELD_WSTEP, HFIELD_DSTEP, 1.0, 0.0, 0.0, false );
 
 		// Give some very bounds which, while conservative,
 		// makes AABB computation more accurate than +/-INF.
