@@ -10,6 +10,9 @@ the rules for this file:
 ------------------------------------------------------------------------------
 
 
+2010-Jun-08 Tilmann Zaschke
+		* Updated javadoc for DHeightfieldData build(...) methods.
+
 2010-Jun-07 Tilmann Zaschke
 		* Implemented support for building DHeightfieldData from short[], 
 		  float[] and double[].
